@@ -70,8 +70,10 @@ ossl_hmac_initialize(VALUE self, VALUE key, VALUE digest)
 
     StringValue(key);
     GetHMAC(self, ctx);
-    HMAC_Init_ex(ctx, RSTRING_PTR(key), RSTRING_LEN(key),
-		 GetDigestPtr(digest), NULL);
+    if (HMAC_Init_ex(ctx, RSTRING_PTR(key), RSTRING_LEN(key),
+		 GetDigestPtr(digest), NULL) != 1) {
+	ossl_raise(eHMACError, "HMAC initialization failed.");
+    }
 
     return self;
 }
@@ -179,7 +181,9 @@ ossl_hmac_reset(VALUE self)
     HMAC_CTX *ctx;
 
     GetHMAC(self, ctx);
-    HMAC_Init_ex(ctx, NULL, 0, NULL, NULL);
+    if (HMAC_Init_ex(ctx, NULL, 0, NULL, NULL) != 1) {
+	ossl_raise(eHMACError, "HMAC initialization failed");
+    }
 
     return self;
 }
