@@ -14,6 +14,13 @@ Mon Oct 10 23:15:00 2011  Brent Roman  <brent@mbari.org>
         
         * fixed GCC 4.6 compile warnings in eval.c and gc.c
 
+Fri Jul 22 11:20:20 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>
+
+        * ext/openssl/ossl_digest.c: Check return value of EVP_DigestInit_ex.
+        * ext/openssl/ossl_hmac.c: Check return value of HMAC_Init_ex.
+          Thanks, Jared Jennings, for the patch.
+          [ Ruby 1.9 - Bug #4944 ] [ruby-core:37670]
+
 Thu Jun 30 12:52:56 2011  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* ext/tk/extconf.rb (intptr_t, uintptr_t): support for the latest ActiveTcl with mingw.
